--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Satisfy&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="../themify-icons/themify-icons.css">
+    <link rel="stylesheet" href="themify-icons/themify-icons.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="../Css/grid_layout.css">
-    <link rel="stylesheet" href="../Css/base.css">
-    <link rel="stylesheet" href="../Css/homepage.css">
+    <link rel="stylesheet" href="Css/grid_layout.css">
+    <link rel="stylesheet" href="Css/base.css">
+    <link rel="stylesheet" href="Css/homepage.css">
     <title>Setsail.edu.vn</title>
 </head>
 <body>
@@ -833,6 +833,6 @@
         </footer>
         <a href="#" id="btn__scroll" >TOP</a>
     </div>
-    <script src="../JavaScript/homepage.js"></script>
+    <script src="JavaScript/homepage.js"></script>
 </body>
 </html>
