--- a/index.html
+++ b/index.html
@@ -413,7 +413,7 @@
                         <div class="reviewers__list row ">
                             <div class="col l-4 reviewers__item">
                                 <div class="characters">
-                                    <img src="../Image/avengers-doctorstrange.jpeg" alt="" class="characters__img">
+                                    <img src="Image/avengers-doctorstrange.jpeg" alt="" class="characters__img">
                                     <div class="character__info">
                                         <a href="" class="character__area">Holland Canals</a>
                                         <span class="character__vote">
@@ -432,7 +432,7 @@
                             </div>
                             <div class="col l-4 reviewers__item">
                                 <div class="characters">
-                                    <img src="../Image/avengers-ironman.jpeg" alt="" class="characters__img">
+                                    <img src="Image/avengers-ironman.jpeg" alt="" class="characters__img">
                                     <div class="character__info">
                                         <a href="" class="character__area">Holland Canals</a>
                                         <span class="character__vote">
@@ -451,7 +451,7 @@
                             </div>
                             <div class="col l-4 reviewers__item">
                                 <div class="characters">
-                                    <img src="../Image/avengers-captainamericajpeg.jpeg" alt="" class="characters__img">
+                                    <img src="Image/avengers-captainamericajpeg.jpeg" alt="" class="characters__img">
                                     <div class="character__info">
                                         <a href="" class="character__area">Holland Canals</a>
                                         <span class="character__vote">
@@ -470,7 +470,7 @@
                             </div>
                             <div class="col l-4 reviewers__item">
                                 <div class="characters">
-                                    <img src="../Image/avengers-hulk.jpeg" alt="" class="characters__img">
+                                    <img src="Image/avengers-hulk.jpeg" alt="" class="characters__img">
                                     <div class="character__info">
                                         <a href="" class="character__area">Holland Canals</a>
                                         <span class="character__vote">
@@ -489,7 +489,7 @@
                             </div>
                             <div class="col l-4 reviewers__item">
                                 <div class="characters">
-                                    <img src="../Image/avengers-antman.jpeg" alt="" class="characters__img">
+                                    <img src="Image/avengers-antman.jpeg" alt="" class="characters__img">
                                     <div class="character__info">
                                         <a href="" class="character__area">Holland Canals</a>
                                         <span class="character__vote">
@@ -508,7 +508,7 @@
                             </div>
                             <div class="col l-4 reviewers__item">
                                 <div class="characters">
-                                    <img src="../Image/avengers-blackpanther.jpeg" alt="" class="characters__img">
+                                    <img src="Image/avengers-blackpanther.jpeg" alt="" class="characters__img">
                                     <div class="character__info">
                                         <a href="" class="character__area">Holland Canals</a>
                                         <span class="character__vote">
@@ -527,7 +527,7 @@
                             </div>
                             <div class="col l-4 reviewers__item">
                                 <div class="characters">
-                                    <img src="../Image/avengers-blackwidow.jpeg" alt="" class="characters__img">
+                                    <img src="Image/avengers-blackwidow.jpeg" alt="" class="characters__img">
                                     <div class="character__info">
                                         <a href="" class="character__area">Holland Canals</a>
                                         <span class="character__vote">
@@ -546,7 +546,7 @@
                             </div>
                             <div class="col l-4 reviewers__item">
                                 <div class="characters">
-                                    <img src="../Image/avengers-hulk.jpeg" alt="" class="characters__img">
+                                    <img src="Image/avengers-hulk.jpeg" alt="" class="characters__img">
                                     <div class="character__info">
                                         <a href="" class="character__area">Holland Canals</a>
                                         <span class="character__vote">
@@ -565,7 +565,7 @@
                             </div>
                             <div class="col l-4 reviewers__item">
                                 <div class="characters">
-                                    <img src="../Image/avengers-hulk.jpeg" alt="" class="characters__img">
+                                    <img src="Image/avengers-hulk.jpeg" alt="" class="characters__img">
                                     <div class="character__info">
                                         <a href="" class="character__area">Holland Canals</a>
                                         <span class="character__vote">
@@ -603,7 +603,7 @@
                             <div class="attachments__list">
                                 <div class="attachments__item">
                                     <div class="attachments__image">
-                                        <img src="../Image/h1-custom-icon-img-1.png" alt="" class="attachments__img">
+                                        <img src="Image/h1-custom-icon-img-1.png" alt="" class="attachments__img">
                                     </div>
                                     <div class="attachments__content">
                                         <span class="attachments__heading">Restaurant</span>
@@ -612,7 +612,7 @@
                                 </div>
                                 <div class="attachments__item">
                                     <div class="attachments__image">
-                                        <img src="../Image/h1-custom-icon-img-2.png" alt="" class="attachments__img">
+                                        <img src="Image/h1-custom-icon-img-2.png" alt="" class="attachments__img">
                                     </div>
                                     <div class="attachments__content">
                                         <span class="attachments__heading">Sightseeing</span>
@@ -621,7 +621,7 @@
                                 </div>
                                 <div class="attachments__item">
                                     <div class="attachments__image">
-                                        <img src="../Image/h1-custom-icon-img-3.png" alt="" class="attachments__img">
+                                        <img src="Image/h1-custom-icon-img-3.png" alt="" class="attachments__img">
                                     </div>
                                     <div class="attachments__content">
                                         <span class="attachments__heading">Shops & Boutiques</span>
@@ -630,7 +630,7 @@
                                 </div>
                                 <div class="attachments__item">
                                     <div class="attachments__image">
-                                        <img src="../Image/h1-custom-icon-img-4.png" alt="" class="attachments__img">
+                                        <img src="Image/h1-custom-icon-img-4.png" alt="" class="attachments__img">
                                     </div>
                                     <div class="attachments__content">
                                         <span class="attachments__heading">Where to Stay</span>
@@ -649,7 +649,7 @@
                         <div class="climbers__list">
                             <div class="climbers__item">
                                 <div class="climbers__image">
-                                    <img src="../Image/our-team-img-6-1.jpg" alt="" class="climbers__img">
+                                    <img src="Image/our-team-img-6-1.jpg" alt="" class="climbers__img">
                                 </div>
                                 <div class="climbers__info">
                                     <h3 class="climbers__name">Climber 1</h3>
@@ -664,7 +664,7 @@
                             </div>
                             <div class="climbers__item">
                                 <div class="climbers__image">
-                                    <img src="../Image/our-team-img-7-1.jpg" alt="" class="climbers__img">
+                                    <img src="Image/our-team-img-7-1.jpg" alt="" class="climbers__img">
                                 </div>
                                 <div class="climbers__info">
                                     <h3 class="climbers__name">Climber 2</h3>
@@ -679,7 +679,7 @@
                             </div>
                             <div class="climbers__item">
                                 <div class="climbers__image">
-                                    <img src="../Image/our-team-img-8-1.jpg" alt="" class="climbers__img">
+                                    <img src="Image/our-team-img-8-1.jpg" alt="" class="climbers__img">
                                 </div>
                                 <div class="climbers__info">
                                     <h3 class="climbers__name">Climber 3</h3>
@@ -694,7 +694,7 @@
                             </div>
                             <div class="climbers__item">
                                 <div class="climbers__image">
-                                    <img src="../Image/our-team-img-9.jpg" alt="" class="climbers__img">
+                                    <img src="Image/our-team-img-9.jpg" alt="" class="climbers__img">
                                 </div>
                                 <div class="climbers__info">
                                     <h3 class="climbers__name">Climber 4</h3>
