cap nhat file anh

--- a/index.html
+++ b/index.html
@@ -148,15 +148,15 @@
                     </li>
                 </ul>
                 <ul class="nav__tools">
-                    <li class="tools_item"><a href="" class="tools_link"><img src="../Image/cart.svg" alt="" class="tools_link-cart"></a>
+                    <li class="tools_item"><a href="" class="tools_link"><img src="Image/cart.svg" alt="" class="tools_link-cart"></a>
                         <div class="tools_link-cartNone">
                             <span class="tools_link-text">No products in cart.</span>
                         </div>
                     </li>
-                    <li class="tools_item"><a href="" class="tools_link"><img src="../Image/search.svg" alt="" class="tools_link-search"></a></li>
+                    <li class="tools_item"><a href="" class="tools_link"><img src="Image/search.svg" alt="" class="tools_link-search"></a></li>
                     <li class="tools_item">
                         <label for="openSide_bar" id="label_openSidebar">
-                            <img src="../Image/menu.svg" alt="" class="tools_link-menu">
+                            <img src="Image/menu.svg" alt="" class="tools_link-menu">
                         </label>
                         <input type="checkbox" name="open" hidden  class="showInput" id="openSide_bar">
                         <div class="sidebar">
@@ -164,13 +164,13 @@
                                 <i class="sidebar__close-icon ti-close"></i>
                             </div>
                             <div class="sidebar__logo">
-                                <img src="../Image/logo_gold.png" alt="" class="sidebar__logo-img">
+                                <img src="Image/logo_gold.png" alt="" class="sidebar__logo-img">
                             </div>
                             <div class="sidebar__picture">
-                                <img src="../Image/quotes_1.png" alt="" class="sidebar__picture-img">
+                                <img src="Image/quotes_1.png" alt="" class="sidebar__picture-img">
                             </div>
                             <div class="sidebar__map">
-                                <img src="../Image/sidebar_map.jpg" alt="" class="sidebar__map-img">
+                                <img src="Image/sidebar_map.jpg" alt="" class="sidebar__map-img">
                     
                             </div>
                             <div class="sidebar__text">
