--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <nav id="nav">
                 <div class="nav__logo">
                     <a href="" class="nav__logo-link">
-                        <img src="../Image/logo_gold.png" alt="" class="nav__logo-img">
+                        <img src="Image/logo_gold.png" alt="" class="nav__logo-img">
                     </a>
                 </div>
                 <ul class="nav__navigation">
