--- a/index.html
+++ b/index.html
@@ -778,7 +778,7 @@
                     <div class="grid">
                         <div class="row">
                             <div class="col l-3 footer__col-first">
-                                <img src="/Image/logo_gold.png" alt="" class="footer__img">
+                                <img src="Image/logo_gold.png" alt="" class="footer__img">
                                 <p class="footer__text">Lorem ipsum dolor sit ametco nsec te tuer adipiscing elitae</p>
                                 <a href=""><span class="footer__contact"><i class="footer__icon far fa-envelope"></i>MinhToan@qode.com</span></a>
                                 <a href="" class=""><span class="footer__contact"><i class="footer__icon fas fa-phone-alt"></i>090 139 57 05</span></a>
